src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__lifetime_bounds.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 10,
                        start_line: 1,
                        start_col: 8,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Lifetime(
                                LifetimeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 11,
                                            end: 13,
                                            start_line: 1,
                                            start_col: 12,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 11,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                            ),
                            Lifetime(
                                LifetimeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 17,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    bounds: [
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 21,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 15,
                                        end: 21,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                            ),
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Span {
                                            start: 23,
                                            end: 24,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 23,
                                        end: 24,
                                        start_line: 1,
                                        start_col: 24,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 10,
                            end: 25,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                body: Record(
                    [
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 5,
                                },
                                span: Span {
                                    start: 28,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 29,
                                },
                            },
                            ty: Type {
                                kind: Reference {
                                    lifetime: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 32,
                                                end: 34,
                                                start_line: 1,
                                                start_col: 33,
                                            },
                                        },
                                    ),
                                    mutable: false,
                                    inner: Type {
                                        kind: Reference {
                                            lifetime: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 36,
                                                        end: 38,
                                                        start_line: 1,
                                                        start_col: 37,
                                                    },
                                                },
                                            ),
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 39,
                                                                        end: 40,
                                                                        start_line: 1,
                                                                        start_col: 40,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 39,
                                                            end: 40,
                                                            start_line: 1,
                                                            start_col: 40,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 39,
                                                    end: 40,
                                                    start_line: 1,
                                                    start_col: 40,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 35,
                                            end: 40,
                                            start_line: 1,
                                            start_col: 36,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 31,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 32,
                                },
                            },
                            span: Span {
                                start: 28,
                                end: 40,
                                start_line: 1,
                                start_col: 29,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
